@@ -2359,6 +2359,42 @@ function PMA_pageselector($rows, $pageNow = 1, $nbTotalPage = 1,
             }
         }
 
+/* 
+    Add page numbers with "geometrically increasing" distances.
+
+    This helps me a lot when navigating through giant tables.
+    
+    Test case: table with 2.28 million sets, 76190 pages. Page of interest is
+    between 72376 and 76190. 
+    Selecting page 72376.
+    Now, old version enumerated only +/- 10 pages around 72376 and the 
+    percentage increment produced steps of about 3000.
+
+    The following code adds page numbers +/- 2,4,8,16,32,64,128,256 etc. 
+    around the current page.
+*/
+
+        $i=$pageNow;
+        $dist=1;
+        while ($i < $x) {
+            $dist=2*$dist;
+            $i=$pageNow+$dist;
+
+            if ($i > 0 && $i <= $x) {
+                $pages[] = $i;
+            }
+        }
+
+        $i=$pageNow;
+        $dist=1;
+        while ($i >0) {
+            $dist=2*$dist;
+            $i=$pageNow-$dist;
+            if ($i > 0 && $i <= $x) {
+                $pages[] = $i;
+            }
+        }
+ 
         // Since because of ellipsing of the current page some numbers may be double,
         // we unify our array:
         sort($pages);
